tests/test017.err
error: test017.tig:2:1: unknown type name `t'
