tests/test017.tig
/* ERR: unknown type name */
t { hd = 42 }
